# ChangeLog for dev-lang/tk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.99 2007/11/25 00:29:38 matsuu Exp $

*tk-8.5_beta3 (25 Nov 2007)

  25 Nov 2007; <matsuu@gentoo.org> +tk-8.5_beta3.ebuild, -tk-8.5b.ebuild:
  Version bumped.
  Fixed wrong symlink wrt bug #200090.

*tk-8.5b (03 Nov 2007)

  03 Nov 2007; Markus Ullmann <jokey@gentoo.org> +tk-8.5b.ebuild:
  Version bump, dropping keywords as status wrt other packages is untested

  23 Sep 2007; Ferris McCormick <fmccor@gentoo.org> tk-8.4.15-r1.ebuild:
  Sparc stable --- security Bug #192539 --- has been running fine.

  20 Sep 2007; Brent Baude <ranger@gentoo.org> tk-8.4.15-r1.ebuild:
  keywording tk-8.4.15-r1 ppc64 for bug#190697

  17 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org> tk-8.4.15-r1.ebuild:
  ppc stable, bug #192539

  17 Sep 2007; Raúl Porcel <armin76@gentoo.org> tk-8.4.15-r1.ebuild:
  alpha/ia64 stable wrt security #192539

  16 Sep 2007; Christoph Mende <angelos@gentoo.org> tk-8.4.15-r1.ebuild:
  Stable on amd64 wrt security bug #192539

  16 Sep 2007; Markus Meier <maekke@gentoo.org> tk-8.4.15-r1.ebuild:
  x86 stable, security bug #192539

  16 Sep 2007; Jeroen Roovers <jer@gentoo.org> tk-8.4.15-r1.ebuild:
  Stable for HPPA (bug #192539).

*tk-8.5_alpha6-r1 (16 Sep 2007)
*tk-8.4.15-r1 (16 Sep 2007)

  16 Sep 2007; MATSUU Takuto <matsuu@gentoo.org>
  -files/tk-8.3.5-tclm4-soname.patch, +files/tk-CVE-2007-4851.patch,
  -tk-8.4.14.ebuild, -tk-8.4.14-r1.ebuild, +tk-8.4.15-r1.ebuild,
  +tk-8.5_alpha6-r1.ebuild:
  Fixed CVE-2007-4851, bug #192539.
  Removed old versions.

  21 Aug 2007; Christoph Mende <angelos@gentoo.org> tk-8.4.15.ebuild:
  Stable on amd64 wrt bug #178320

  18 Aug 2007; nixnut <nixnut@gentoo.org> tk-8.4.15.ebuild:
  Stable on ppc wrt bug 178320

  15 Aug 2007; Jeroen Roovers <jer@gentoo.org> tk-8.4.15.ebuild:
  Stable for HPPA (bug #178320).
