@@ -7,10 +7,8 @@ AUX tk-8.5_alpha6-tclm4-soname.patch 540 RMD160 7ed0721d8ee1fda0b1109c753f2fa660
 AUX tk-CVE-2007-4851.patch 405 RMD160 bfc884fbe1f0f2facb892ff0100f59dae0fe5256 SHA1 31c34d01cc5372395d37d2e878a61a059933e5b8 SHA256 e57158583d127b3d9751becb03ee6e11c0fc602150396ce902d1fdee73cb4a32
 AUX tk-configure-LANG.patch 1686 RMD160 4ff8355af81705058fd411910dfae94887bcd884 SHA1 67ae0deff73689cb39cd6e7451262bdda9c25a39 SHA256 dc9386b88eac48c282d63d0be7e7be81d4a0a08035a8b97138a61133e057bcea
 DIST tk8.4.15-src.tar.gz 3340313 RMD160 8facb8033ce811097a3568373581687a749dda2d SHA1 832b39fc3e64dcbbfff4fc192e33d3fc8ef76c43 SHA256 2205bb0b0172f5553565f9f323ccf4bc122875084abc21a46f86ac560b9cd935
-DIST tk8.5a6-src.tar.gz 3682249 RMD160 9cb6f2c7665eee8269a69805a3c9b45edd806cda SHA1 e26fd2f7490c04d78218a33644ca044b39aa59a4 SHA256 67f5022f31d7a8adea7d150caa5c7de56ea0051e287f67fcb15b82f7fd5b8fd6
-DIST tk8.5b3-src.tar.gz 3751830 RMD160 3bf415bdead432d3fcfb7f0767e88b81bd86a63b SHA1 3a31be86cf93a6b51011aa26ae44bac5a8b3b9ec SHA256 188fc88a06747c911195c5883e35ea5e7c92a4c81e5be0d080b72e14e495093b
+DIST tk8.5.0-src.tar.gz 3755427 RMD160 d2bcabd3a125f60842c322839a20bbdc074d0afc SHA1 289ca08c53b4719b03ae47a379b4b5a2f4d404ec SHA256 ef75421a4b7d74d4d934c700d4d7649733cd1ecbbfb233eb6ffadfebe7f412c6
 EBUILD tk-8.4.15-r1.ebuild 3632 RMD160 07c1a68cea24a78a6891c3f1454c1c612b862f7b SHA1 8da269c26c4a431d960f03f2d4a9fe541b5d2494 SHA256 132b5526fb221f473c76d4c7fcd3865ae22193ddf0c148027ec12a9822741abc
-EBUILD tk-8.5_alpha6-r1.ebuild 3140 RMD160 783a3c44d529687b74db535b5bb5d302e0745a5a SHA1 00c033fb487f4ac0e58269cc48a21bf2a9ebc32d SHA256 f826d582c13f0f92064442226a9e47e9a6cc62d5452e322a894ec172aec3076c
-EBUILD tk-8.5_beta3.ebuild 3084 RMD160 36d3ce603d0acad9cef568556f6b2b13ee9f7bf0 SHA1 ac0dcfda190befba82d587526af7ef4f3c7bcf19 SHA256 391edab2c04e5f73f3db12d4d4ce70a36d02faebcd7e34ba64552e7c8511378c
-MISC ChangeLog 13475 RMD160 3755c9fe35aa3ace8d223ee4473fe22149bd2391 SHA1 dc1aad5c1c50a2fb0163141b47aa577c3888c794 SHA256 c9348e47e31bb2a6e94629169e284204cce42c90d8943a52ea549f32fb23d5bd
+EBUILD tk-8.5.0.ebuild 3080 RMD160 d5982edb798f619ff666f2f16b734a279eab69a1 SHA1 d14de3c64426ca0b330c4dcb85dbaa96953d28b2 SHA256 7033db384c6b5cae19686bb3d92827c9a7e2638b11814d990fff82f21dce6bc5
+MISC ChangeLog 13762 RMD160 bb6744d1ddb7f7633cf84966eabaad9bf3e076b7 SHA1 59677b3534cea588492b750c4d9e787ba56cd10a SHA256 61756b70b10cddce308e2331cfc43fdc9ce99273b8f513f20524e0fa8d3ca9d8
 MISC metadata.xml 159 RMD160 117cc289391c0477579de68e7347628756673eac SHA1 37f242cbf27c6e859fc63487487fdcae09d6931f SHA256 2cf13398186ae4abcd9f41c51ffb3bcdcc7da32df2c2af5c2de2e2cc8ad194ce
