@@ -1,6 +1,15 @@
 # ChangeLog for dev-lang/tk
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.99 2007/11/25 00:29:38 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.100 2007/12/22 03:58:06 matsuu Exp $
+
+*tk-8.5.0 (22 Dec 2007)
+*tk-8.4.16 (22 Dec 2007)
+
+  22 Dec 2007; MATSUU Takuto <matsuu@gentoo.org> -tk-8.4.15.ebuild,
+  +tk-8.4.16.ebuild, -tk-8.5_alpha6.ebuild, -tk-8.5_alpha6-r1.ebuild,
+  -tk-8.5_beta3.ebuild, +tk-8.5.0.ebuild:
+  Version bumped. bug #194385.
+  Removed old versions.
 
 *tk-8.5_beta3 (25 Nov 2007)
 
